[LG-41] - fixed problem with integration test